# mmb-logger

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  schema.sql
docs/: agent-sessions.md
docs/tasks/: L1-filtro-andaime-version.md  L3-logger-model-tracking.md  L4-logger-t3-backfill.md
src/mmb_logger/: __init__.py  __main__.py  cli.py  db.py  models.py  targets.py
src/mmb_logger/api/: __init__.py  app.py  reconcile_scheduler.py
src/mmb_logger/api/routes/: __init__.py  andaime_versions.py  ciclos.py  epicos.py  eventos.py  (+4 more)
src/mmb_logger/backfill/: __init__.py  agent_sessions.py  model.py
src/mmb_logger/ingest/: __init__.py  agents_stream.py  frontmatter.py  inbox.py  inference.py  journal.py  runner.py  watcher.py
src/mmb_logger/reconcile/: __init__.py  _runtime.py  abort.py  audit.py  derive.py  gh.py  inbox.py  intents.py  planner_models.py  reconcile.py  transcripts.py
tests/: conftest.py  test_agents_parser.py  test_api.py  test_backfill_agent_sessions.py  test_backfill_model.py  test_db.py  test_external_target_linkage.py  test_frontmatter.py  test_inbox_parser.py  test_inference.py  test_journal_parser.py  test_metrics_bucketing.py  test_reconcile.py  test_reconcile_closure.py  test_reconcile_model.py  test_reconcile_phase2.py  test_reconcile_phase3.py  test_reconcile_phase4.py  test_reconcile_projetos.py  test_reconcile_scheduler.py  test_targets.py
tests/fixtures/: agents_sample.jsonl  inbox_briefing.md  inbox_error_task_abortada.md  inbox_status_issue_criada.md  inbox_status_pr_aberto.md  inbox_status_task_fechada.md  journal_sample.jsonl
